[gd_scene load_steps=19 format=3 uid="uid://0a4sac7166s3"]

[ext_resource type="PackedScene" uid="uid://bdkumy0hsg5qy" path="res://scenes/main_map.tscn" id="1_ipu61"]
[ext_resource type="PackedScene" uid="uid://cadl6hjl3d2cy" path="res://actors/player/player.tscn" id="2_ygxny"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://ui/addons/virtual_joystick/virtual_joystick_scene.tscn" id="3_wi4c7"]
[ext_resource type="Script" uid="uid://bvk41wm4a8q8" path="res://scenes/pause_menu.gd" id="4_70vka"]
[ext_resource type="Script" uid="uid://cs68ig6opox8r" path="res://scenes/button.gd" id="5_2l77h"]
[ext_resource type="PackedScene" uid="uid://csa6wbw37bdv4" path="res://actors/components/location_area.tscn" id="6_ygxny"]
[ext_resource type="Resource" uid="uid://mxgiao4caxe" path="res://data/locations/castle.tres" id="7_wi4c7"]
[ext_resource type="Resource" uid="uid://chtbl182b56cu" path="res://data/locations/blacksmith.tres" id="8_2l77h"]
[ext_resource type="Resource" uid="uid://cb8kkqmfx7qfu" path="res://data/locations/cave.tres" id="8_nqdth"]
[ext_resource type="Resource" uid="uid://c16pcstg0nogm" path="res://data/locations/fountain.tres" id="9_nqdth"]
[ext_resource type="Resource" uid="uid://og2kcn0w858d" path="res://data/locations/dock.tres" id="10_wjob3"]
[ext_resource type="Resource" uid="uid://cwf8308d5sfy3" path="res://data/locations/farm.tres" id="11_8xp80"]
[ext_resource type="Resource" uid="uid://diyfik4mkkafx" path="res://data/locations/guild.tres" id="13_sp04v"]
[ext_resource type="Resource" uid="uid://6f47f14vd58t" path="res://data/locations/library.tres" id="14_sp04v"]
[ext_resource type="Resource" uid="uid://4xiter26ufx3" path="res://data/locations/lumberjack.tres" id="15_ihbck"]
[ext_resource type="Resource" uid="uid://xv0bnonlvumt" path="res://data/locations/marketplace.tres" id="16_ihbck"]

[sub_resource type="GDScript" id="GDScript_74lek"]
script/source = "extends ProgressBar


# Called when the node enters the scene tree for the first time.
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqdth"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Main Game" type="Node2D"]

[node name="Main Map" parent="." instance=ExtResource("1_ipu61")]
scale = Vector2(0.4, 0.4)
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("2_ygxny")]
position = Vector2(2901, 2273)
scale = Vector2(1.6, 1.6)
max_speed = 500.0
turn_speed = 2.5
reverse_speed = 300.0

[node name="CanvasLayer3" type="CanvasLayer" parent="Player"]

[node name="VBoxContainer" type="VBoxContainer" parent="Player/CanvasLayer3"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 89.0
grow_horizontal = 2

[node name="BoostLabel" type="ProgressBar" parent="Player/CanvasLayer3/VBoxContainer"]
modulate = Color(0.49803922, 1, 1, 1)
layout_mode = 2

[node name="DurabilityBar" type="ProgressBar" parent="Player/CanvasLayer3/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ShieldLabel" type="ProgressBar" parent="Player/CanvasLayer3/VBoxContainer"]
layout_mode = 2

[node name="Gas" type="ProgressBar" parent="Player/CanvasLayer3/VBoxContainer"]
modulate = Color(1, 0.18039216, 0, 1)
layout_mode = 2
script = SubResource("GDScript_74lek")

[node name="CanvasLayer2" type="CanvasLayer" parent="Player"]

[node name="Virtual Joystick" parent="Player/CanvasLayer2" instance=ExtResource("3_wi4c7")]

[node name="CanvasLayer4" type="CanvasLayer" parent="Player"]

[node name="PauseMenu" type="Control" parent="Player/CanvasLayer4"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 274.0
offset_right = 1184.0
offset_bottom = 911.0
script = ExtResource("4_70vka")

[node name="Panel" type="Panel" parent="Player/CanvasLayer4/PauseMenu"]
layout_mode = 0
offset_left = -52.0
offset_top = -270.0
offset_right = 1098.0
offset_bottom = 377.0

[node name="VBoxContainer" type="VBoxContainer" parent="Player/CanvasLayer4/PauseMenu/Panel"]
layout_mode = 0
offset_left = 366.0
offset_top = 181.0
offset_right = 788.0
offset_bottom = 488.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Player/CanvasLayer4/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resumeBtn" type="Button" parent="Player/CanvasLayer4/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nqdth")
text = "Resume"

[node name="optionsBtn" type="Button" parent="Player/CanvasLayer4/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nqdth")
text = "Options"

[node name="exitBtn" type="Button" parent="Player/CanvasLayer4/PauseMenu/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_nqdth")
text = "Exit"

[node name="PauseBtn" type="Button" parent="Player/CanvasLayer4"]
offset_left = 978.0
offset_top = 18.0
offset_right = 1067.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 50
text = "II"
script = ExtResource("5_2l77h")

[node name="Locations" type="Node2D" parent="."]

[node name="Blacksmith" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(4223, 358)
scale = Vector2(10, 10)
location_res = ExtResource("8_2l77h")

[node name="Castle" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(642, 169)
scale = Vector2(10, 10)
location_res = ExtResource("7_wi4c7")

[node name="Cave" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(6526, 641)
scale = Vector2(10, 10)
location_res = ExtResource("8_nqdth")

[node name="Dock" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(358.00003, 4739)
scale = Vector2(10, 10)
location_res = ExtResource("10_wjob3")

[node name="Farm" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(2403, 443.00006)
scale = Vector2(10, 10)
location_res = ExtResource("11_8xp80")

[node name="Fountain" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(2913.0005, 1985.9999)
scale = Vector2(10, 10)
location_res = ExtResource("9_nqdth")

[node name="Guild" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(6014, 3007)
scale = Vector2(10, 10)
location_res = ExtResource("13_sp04v")

[node name="Libary" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(3946, 2909.0002)
scale = Vector2(10, 10)
location_res = ExtResource("14_sp04v")

[node name="Lumberjack" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(6605, 5058)
scale = Vector2(10, 10)
location_res = ExtResource("15_ihbck")

[node name="Marketplace" parent="Locations" instance=ExtResource("6_ygxny")]
position = Vector2(1268.0005, 3428)
scale = Vector2(10, 10)
location_res = ExtResource("16_ihbck")

[connection signal="pressed" from="Player/CanvasLayer4/PauseMenu/Panel/VBoxContainer/resumeBtn" to="Player/CanvasLayer4/PauseMenu" method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Player/CanvasLayer4/PauseMenu/Panel/VBoxContainer/optionsBtn" to="Player/CanvasLayer4/PauseMenu" method="_on_options_btn_pressed"]
[connection signal="pressed" from="Player/CanvasLayer4/PauseMenu/Panel/VBoxContainer/exitBtn" to="Player/CanvasLayer4/PauseMenu" method="_on_exit_btn_pressed"]
